// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LcAnalytics reach goal should parse goals 1`] = `
Array [
  Array [
    "click",
    Object {
      "base": "param",
    },
  ],
  Array [
    "hover",
    Object {
      "base": "param",
    },
  ],
  Array [
    "visit",
    Object {
      "base": "param",
    },
  ],
]
`;

exports[`LcAnalytics track google analytics should pass all defined params 1`] = `
Object {
  "eventAction": "action",
  "eventCategory": "cat",
  "eventLabel": "label",
  "hitType": "event",
  "location": "http://localhost/",
  "page": "url",
  "url": "http://localhost/",
}
`;

exports[`LcAnalytics track google analytics should replace url key with page 1`] = `
Object {
  "action": "track",
  "alias": "google-analytics",
  "params": Object {
    "eventAction": "action",
    "hitType": "event",
    "location": "http://localhost/",
    "page": "url",
    "url": "http://localhost/",
  },
}
`;

exports[`LcAnalytics track page view should track GA with data 1`] = `
Array [
  Array [
    Object {
      "action": "init",
      "alias": "google-analytics",
      "params": Object {
        "id": "GA-123",
        "provider": "google-analytics",
      },
    },
  ],
  Array [
    Object {
      "action": "track",
      "alias": "google-analytics",
      "params": Object {
        "additional": "data",
        "location": "http://localhost/",
        "url": "http://localhost/",
      },
    },
  ],
]
`;

exports[`LcAnalytics track virtual page should work with yanalytics 1`] = `
Array [
  Array [
    Object {
      "action": "track",
      "alias": "google-analytics",
      "params": Object {
        "hitType": "pageview",
        "location": "http://localhost/",
        "page": "url",
        "url": "http://localhost/",
      },
    },
  ],
  Array [
    Object {
      "action": "track",
      "alias": "facebook-pixel",
      "params": Object {
        "event": "PageView",
        "location": "url",
        "url": "url",
      },
    },
  ],
  Array [
    Object {
      "action": "track",
      "alias": "my-target",
      "params": Object {
        "location": "url",
        "type": "pageView",
        "url": "url",
      },
    },
  ],
  Array [
    Object {
      "action": "track",
      "alias": "vk-pixel",
      "params": Object {
        "event": "pageview",
        "location": "url",
        "url": "url",
      },
    },
  ],
  Array [
    Object {
      "action": "track",
      "alias": "tiktok-pixel",
      "params": Object {
        "event": "pageview",
        "location": "url",
        "type": "virtualPage",
        "url": "url",
      },
    },
  ],
]
`;
